--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
              <div class="s-header__block">
                 <div class="s-header__branding">
                     <p class="site-title">
-                        <a href="index.html" rel="home">Augustine.</a>
+                        <a href="index.html" rel="home">Arun Alexander.</a>
                     </p>
                 </div>
 
