--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Augustine</title>
+    <title>Arun Alexander</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -103,7 +103,7 @@
 
                     <div class="s-intro__text">
                         <h1 class="s-intro__text-huge animate-on-load">
-                            Augustine
+                            Arun Alexander
                         </h1>
                         <h3 class="animate-on-load">Digital Designer <span>+</span> Developer</h3>
                     </div>
