--- a/index.html
+++ b/index.html
@@ -234,9 +234,21 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">University of Life</h3>
-                                    <h5 class="timeline__meta">Master in Graphic Design</h5>
-                                    <p class="timeline__timeframe">April 2015</p>
+                                    <h4 class="timeline__title">Indira Gandhi National Open University  </h3>
+                                    <h5 class="timeline__meta">Master of Computer Application</h5>
+                                    <p class="timeline__timeframe">Pursuing</p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                </div>
+                            </div>
+
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
+                                    <h4 class="timeline__title">Mahatma Gandhi University  </h3>
+                                    <h5 class="timeline__meta">Bachelor of Computer Application</h5>
+                                    <p class="timeline__timeframe">April 2016</p>
                                 </div>
                                 <div class="timeline__desc">
                                     <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
@@ -246,9 +258,21 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">School of Cool Designers</h4>
-                                    <h5 class="timeline__meta">B.A. Degree in Graphic Design</h5>
-                                    <p class="timeline__timeframe">August 2012</p>
+                                    <h4 class="timeline__title">St. Augustine’s Higher Secondary School, Aroor</h4>
+                                    <h5 class="timeline__meta">Higher Secondary Education</h5>
+                                    <p class="timeline__timeframe">April 2013</p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                </div>
+                            </div>
+
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
+                                    <h4 class="timeline__title">Our Lady of Mercy Higher Secondary School, Aroor</h4>
+                                    <h5 class="timeline__meta">Matriculation (ICSE)</h5>
+                                    <p class="timeline__timeframe">April 2011</p>
                                 </div>
                                 <div class="timeline__desc">
                                     <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
@@ -271,7 +295,7 @@
                         <ul class="skill-bars">
                             <li>
                             <div class="progress percent95"></div>
-                            <strong>HTML & SCSS</strong>
+                            <strong>React Native & React Js</strong>
                             </li>
                             <li>
                             <div class="progress percent85"></div>
