--- a/index.html
+++ b/index.html
@@ -721,12 +721,12 @@
 
                 <div class="column lg-5 md-6 stack-on-900 left-block">
                     <p>
-                        Dolorum est et corporis. Unde nobis quo rerum aspernatur cum dolorem
-                        tempore et. Beatae atque nobis qui nam nulla nihil sunt quis. Earum
-                        minima cum consectetur ab repudiandae sed esse dolores.
+                        Would love to hear more from you on anything under the sky find me on these platforms or if you
+                        want to shout at me directly these are my contact info. If you are intrested in more of my projects 
+                        here is a <a href="#0">link</a> to the same feel free to browse.
 
                     <div class="s-footer__buttons">
-                        <a href="mailto:sayhello@augustine.com" class="btn btn--primary u-fullwidth">Say Hello</a>
+                        <a href="mailto:arunalexkk@outlook.com" class="btn btn--primary u-fullwidth">Say Hello</a>
                         <a href="#0" class="btn btn--stroke u-fullwidth">Get My CV</a>
                     </div>
 
@@ -752,7 +752,7 @@
                         <ul class="link-list">
                             <li><a href="#0">Facebook</a></li>
                             <li><a href="#0">Twitter</a></li>
-                            <li><a href="#0">Github</a></li>
+                            <li><a href="https://github.com/arunalexkk">Github</a></li>
                         </ul>
                     </div>
 
