--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                 <path
-                                    d="M20,3H4C3.447,3,3,3.448,3,4v16c0,0.552,0.447,1,1,1h8.615v-6.96h-2.338v-2.725h2.338v-2c0-2.325,1.42-3.592,3.5-3.592 c0.699-0.002,1.399,0.034,2.095,0.107v2.42h-1.435c-1.128,0-1.348,0.538-1.348,1.325v1.735h2.697l-0.35,2.725h-2.348V21H20 c0.553,0,1-0.448,1-1V4C21,3.448,20.553,3,20,3z">
+                                    d="M20,3H4C3.447,3,3,3.448,3,4v16c0,0.552,0.447,1,1,1h16c0.553,0,1-0.448,1-1V4C21,3.448,20.553,3,20,3zM8.339,19.012H5.673
+                                    V10.98h2.666V19.012zM7.006,9.731c-0.853,0-1.546-0.693-1.546-1.546s0.693-1.546,1.546-1.546s1.546,0.693,1.546,1.546
+                                    S7.86,9.731,7.006,9.731zM18.336,19.012h-2.664v-4.25c0-1.013-0.019-2.313-1.409-2.313c-1.41,0-1.625,1.102-1.625,2.237v4.325
+                                    h-2.664V10.98h2.555v1.109h0.036c0.354-0.668,1.219-1.374,2.509-1.374c2.68,0,3.173,1.763,3.173,4.055V19.012z">
                                 </path>
                             </svg>
                             <span class="u-screen-reader-text">Facebook</span>
@@ -379,6 +382,10 @@
                             <li>
                                 <div class="progress percent75"></div>
                                 <strong>Atomic architecture</strong>
+                            </li>
+                            <li>
+                                <div class="progress percent75"></div>
+                                <strong>Flutter</strong>
                             </li>
                             <li>
                                 <div class="progress percent75"></div>
@@ -750,8 +757,8 @@
                             Connect
                         </h2>
                         <ul class="link-list">
-                            <li><a href="#0">Facebook</a></li>
-                            <li><a href="#0">Twitter</a></li>
+                            <li><a href="#0">Linkedin</a></li>
+                            <li><a href="#0">stackoverflow</a></li>
                             <li><a href="https://github.com/arunalexkk">Github</a></li>
                         </ul>
                     </div>
