--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                 <ul class="s-header__social">
                     <li>
-                        <a href="#0">
+                        <a href="https://www.linkedin.com/in/arunalexanderk/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                 <path
@@ -81,16 +81,16 @@
                                     h-2.664V10.98h2.555v1.109h0.036c0.354-0.668,1.219-1.374,2.509-1.374c2.68,0,3.173,1.763,3.173,4.055V19.012z">
                                 </path>
                             </svg>
-                            <span class="u-screen-reader-text">Facebook</span>
+                            <span class="u-screen-reader-text">Linkedin</span>
                         </a>
                     </li>
                     <li>
                         <a href="#0">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
-                                <path
-                                    d="M19.633,7.997c0.013,0.175,0.013,0.349,0.013,0.523c0,5.325-4.053,11.461-11.46,11.461c-2.282,0-4.402-0.661-6.186-1.809 c0.324,0.037,0.636,0.05,0.973,0.05c1.883,0,3.616-0.636,5.001-1.721c-1.771-0.037-3.255-1.197-3.767-2.793 c0.249,0.037,0.499,0.062,0.761,0.062c0.361,0,0.724-0.05,1.061-0.137c-1.847-0.374-3.23-1.995-3.23-3.953v-0.05 c0.537,0.299,1.16,0.486,1.82,0.511C3.534,9.419,2.823,8.184,2.823,6.787c0-0.748,0.199-1.434,0.548-2.032 c1.983,2.443,4.964,4.04,8.306,4.215c-0.062-0.3-0.1-0.611-0.1-0.923c0-2.22,1.796-4.028,4.028-4.028 c1.16,0,2.207,0.486,2.943,1.272c0.91-0.175,1.782-0.512,2.556-0.973c-0.299,0.935-0.936,1.721-1.771,2.22 c0.811-0.088,1.597-0.312,2.319-0.624C21.104,6.712,20.419,7.423,19.633,7.997z">
-                                </path>
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.332 3.608 1.308.975.975 1.246 2.242 1.308 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.332 2.633-1.308 3.608-.975.975-2.242 1.246-3.608 1.308-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.332-3.608-1.308-.975-.975-1.246-2.242-1.308-3.608-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.062-1.366.332-2.633 1.308-3.608.975-.975 2.242-1.246 3.608-1.308 1.266-.058 1.646-.07 4.85-.07M12 0C8.741 0 8.332.015 7.053.072 5.77.13 4.578.397 3.608 1.368c-.97.97-1.237 2.162-1.295 3.445C2.015 5.93 2 6.338 2 9.599v4.8c0 3.26.015 3.669.072 4.949.058 1.283.325 2.475 1.295 3.445.97.97 2.162 1.237 3.445 1.295C8.332 21.985 8.741 22 12 22s3.669-.015 4.949-.072c1.283-.058 2.475-.325 3.445-1.295.97-.97 1.237-2.162 1.295-3.445.057-1.28.072-1.689.072-4.949v-4.8c0-3.261-.015-3.669-.072-4.949-.058-1.283-.325-2.475-1.295-3.445-.97-.97-2.162-1.237-3.445-1.295C15.669.015 15.26 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.998 3.998 0 110-7.996 3.998 3.998 0 010 7.996zm6.406-11.845a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z" fill="white"/>
+  
                             </svg>
                             <span class="u-screen-reader-text">Twitter</span>
                         </a>
@@ -757,8 +757,8 @@
                             Connect
                         </h2>
                         <ul class="link-list">
-                            <li><a href="#0">Linkedin</a></li>
-                            <li><a href="#0">stackoverflow</a></li>
+                            <li><a href="https://www.linkedin.com/in/arunalexanderk/">Linkedin</a></li>
+                            <li><a href="#0">Instagram</a></li>
                             <li><a href="https://github.com/arunalexkk">Github</a></li>
                         </ul>
                     </div>
