--- a/index.html
+++ b/index.html
@@ -285,10 +285,7 @@
                                         <p class="timeline__timeframe">Pursuing</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi
-                                        cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident
-                                        cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet
-                                        est occaecat nisi.</p>
+                                    <p></p>
                                 </div>
                             </div>
 
@@ -300,10 +297,7 @@
                                         <p class="timeline__timeframe">April 2016</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi
-                                        cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident
-                                        cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet
-                                        est occaecat nisi.</p>
+                                    <p>.</p>
                                 </div>
                             </div>
 
@@ -315,10 +309,7 @@
                                     <p class="timeline__timeframe">April 2013</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi
-                                        cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident
-                                        cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet
-                                        est occaecat nisi.</p>
+                                    <p></p>
                                 </div>
                             </div>
 
@@ -330,10 +321,7 @@
                                     <p class="timeline__timeframe">April 2011</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi
-                                        cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident
-                                        cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet
-                                        est occaecat nisi.</p>
+                                    <p></p>
                                 </div>
                             </div>
 
@@ -622,13 +610,10 @@
 
                             <div class="testimonial-slider__slide swiper-slide">
                                 <p>
-                                    I have worked with Arun and the most impressive quality in him was his can do
-                                    attitude and the ever pleasant positive air he brings to the team.
+                                    I've had the pleasure of working closely with Arun, and what struck me most was his can-do attitude and the consistently positive energy he brought to our team.
                                 </p>
                                 <p>
-                                    He was eager to learn and very open for any suggestions which makes him a great
-                                    developer and even from his starting days, he showed a great potential for
-                                    leadership by always taking up responsibilities and finishing them with grace.
+                                    He approached challenges with enthusiasm, always eager to learn and open to suggestions, which not only made him a standout developer but also a joy to collaborate with. Right from the start, he demonstrated a natural knack for leadership, willingly taking on responsibilities and seeing them through with grace.
                                 </p>
                                 <div class="testimonial-slider__author">
                                     <img src="images/avatars/user-03.jpg" alt="Author image"
@@ -643,14 +628,10 @@
 
                             <div class="testimonial-slider__slide swiper-slide">
                                 <p>
-                                    I have worked with Arun and the most impressive quality in him was his can do
-                                    attitude and the ever pleasant positive air he brings to the team.
+                                    Working with Arun was a pleasure; his standout quality is his can-do attitude and the consistently positive energy he brings to the team. 
                                 </p>
                                 <p>
-                                    He was eager to learn and very open for any suggestions which makes him a great
-                                    developer and even from his starting days, he showed a great potential for
-                                    leadership by always taking up responsibilities and finishing them with grace.
-                                </p>
+                                   He demonstrated an unparalleled ability to guide our team to success, making him not only a skilled developer but also a collaborative team player. From the outset, Arun displayed leadership potential by willingly taking on responsibilities and completing them with grace.
                                 <div class="testimonial-slider__author">
                                     <img src="images/avatars/user-01.jpg" alt="Author image"
                                         class="testimonial-slider__avatar">
@@ -663,13 +644,10 @@
 
                             <div class="testimonial-slider__slide swiper-slide">
                                 <p>
-                                    I have worked with Arun and the most impressive quality in him was his can do
-                                    attitude and the ever pleasant positive air he brings to the team.
+                                    I’ve had the pleasure of working closely with Arun, and I can’t emphasize enough how impressive his can-do attitude is.
                                 </p>
                                 <p>
-                                    He was eager to learn and very open for any suggestions which makes him a great
-                                    developer and even from his starting days, he showed a great potential for
-                                    leadership by always taking up responsibilities and finishing them with grace.
+                                    Not only does he bring a refreshing positivity to the team, but he also approaches challenges with enthusiasm and a genuine eagerness to learn. Arun is incredibly open to suggestions, which makes him an outstanding developer. From his very first days, he demonstrated remarkable leadership potential by consistently taking on responsibilities and executing them with grace. It’s no exaggeration to say that Arun is a true asset to any team!
                                 </p>
                                 <div class="testimonial-slider__author">
                                     <img src="images/avatars/user-05.jpg" alt="Author image"
