minor change in UI

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </li>
                     <li>
                         <a href="https://www.instagram.com/arunalexanderkumbalanghi">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22"
                                 style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                 d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.332 3.608 1.308.975.975 1.246 2.242 1.308 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.332 2.633-1.308 3.608-.975.975-2.242 1.246-3.608 1.308-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.332-3.608-1.308-.975-.975-1.246-2.242-1.308-3.608-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.062-1.366.332-2.633 1.308-3.608.975-.975 2.242-1.246 3.608-1.308 1.266-.058 1.646-.07 4.85-.07M12 0C8.741 0 8.332.015 7.053.072 5.77.13 4.578.397 3.608 1.368c-.97.97-1.237 2.162-1.295 3.445C2.015 5.93 2 6.338 2 9.599v4.8c0 3.26.015 3.669.072 4.949.058 1.283.325 2.475 1.295 3.445.97.97 2.162 1.237 3.445 1.295C8.332 21.985 8.741 22 12 22s3.669-.015 4.949-.072c1.283-.058 2.475-.325 3.445-1.295.97-.97 1.237-2.162 1.295-3.445.057-1.28.072-1.689.072-4.949v-4.8c0-3.261-.015-3.669-.072-4.949-.058-1.283-.325-2.475-1.295-3.445-.97-.97-2.162-1.237-3.445-1.295C15.669.015 15.26 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.998 3.998 0 110-7.996 3.998 3.998 0 010 7.996zm6.406-11.845a1.44 1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z" fill="white"/>
@@ -738,6 +738,7 @@
                             <li><a href="https://www.linkedin.com/in/arunalexanderk/">Linkedin</a></li>
                             <li><a href="https://www.instagram.com/arunalexanderkumbalanghi">Instagram</a></li>
                             <li><a href="https://github.com/arunalexkk">Github</a></li>
+                            <li><a href="https://api.whatsapp.com/send?phone=+919020283737">WhatsApp</a></li>
                         </ul>
                     </div>
 
