--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                                 <a href="https://www.behance.net/" title="Project Link" class="project-link">Project
                                     Link</a>
                             </div>
-                            <h4 class="folio-item__title">KSUM</h4>
+                            <h4 class="folio-item__title">Ksum</h4>
                         </div>
                         <div class="folio-item__caption">
                             <p> The Official application of Kerala Startup Mission (KSUM). <a href="#">Play Store
@@ -599,7 +599,7 @@
                                     leadership by always taking up responsibilities and finishing them with grace.
                                 </p>
                                 <div class="testimonial-slider__author">
-                                    <img src="images/avatars/user-02.jpg" alt="Author image"
+                                    <img src="images/avatars/user-01.jpg" alt="Author image"
                                         class="testimonial-slider__avatar">
                                     <cite class="testimonial-slider__cite">
                                         <strong>Arun Pillai</strong>
@@ -616,7 +616,7 @@
                                     He approached challenges with enthusiasm, always eager to learn and open to suggestions, which not only made him a standout developer but also a joy to collaborate with. Right from the start, he demonstrated a natural knack for leadership, willingly taking on responsibilities and seeing them through with grace.
                                 </p>
                                 <div class="testimonial-slider__author">
-                                    <img src="images/avatars/user-03.jpg" alt="Author image"
+                                    <img src="images/avatars/user-05.jpg" alt="Author image"
                                         class="testimonial-slider__avatar">
                                     <cite class="testimonial-slider__cite">
                                         <strong>Tony B George
@@ -633,7 +633,7 @@
                                 <p>
                                    He demonstrated an unparalleled ability to guide our team to success, making him not only a skilled developer but also a collaborative team player. From the outset, Arun displayed leadership potential by willingly taking on responsibilities and completing them with grace.
                                 <div class="testimonial-slider__author">
-                                    <img src="images/avatars/user-01.jpg" alt="Author image"
+                                    <img src="images/avatars/user-03.jpg" alt="Author image"
                                         class="testimonial-slider__avatar">
                                     <cite class="testimonial-slider__cite">
                                         <strong>Shyjith Pala</strong>
@@ -650,7 +650,7 @@
                                     Not only does he bring a refreshing positivity to the team, but he also approaches challenges with enthusiasm and a genuine eagerness to learn. Arun is incredibly open to suggestions, which makes him an outstanding developer. From his very first days, he demonstrated remarkable leadership potential by consistently taking on responsibilities and executing them with grace. It’s no exaggeration to say that Arun is a true asset to any team!
                                 </p>
                                 <div class="testimonial-slider__author">
-                                    <img src="images/avatars/user-05.jpg" alt="Author image"
+                                    <img src="images/avatars/user-02.jpg" alt="Author image"
                                         class="testimonial-slider__avatar">
                                     <cite class="testimonial-slider__cite">
                                         <strong>Gayatri Agnew</strong>
