--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <h1 class="s-intro__text-huge animate-on-load">
                             Arun Alexander
                         </h1>
-                        <h3 class="animate-on-load">React Native|TDD | Android | MERN Fullstack</h3>
+                        <h3 class="animate-on-load">React Native | TDD | Android | MERN Fullstack</h3>
                     </div>
 
                     <div class="s-intro__bg"></div>
@@ -708,11 +708,11 @@
                     <p>
                         Would love to hear more from you on anything under the sky find me on these platforms or if you
                         want to shout at me directly these are my contact info. If you are intrested in more of my projects 
-                        here is a <a href="#0">link</a> to the same feel free to browse.
+                        here is a <a href="https://arunalexkk.github.io/assets/Arun_alexander_cv.pdf">link</a> to the same feel free to browse.
 
                     <div class="s-footer__buttons">
                         <a href="mailto:arunalexkk@outlook.com" class="btn btn--primary u-fullwidth">Say Hello</a>
-                        <a href="#0" class="btn btn--stroke u-fullwidth">Get My CV</a>
+                        <a href="https://arunalexkk.github.io/assets/Arun_alexander_cv.pdf" class="btn btn--stroke u-fullwidth">Get My CV</a>
                     </div>
 
                     </p>
