--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#0">
-                            <svg xmlns="https://github.com/arunalexkk" width="24" height="24" viewBox="0 0 24 24"
+                        <a href="https://github.com/arunalexkk">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                     d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
@@ -468,7 +468,7 @@
                         <div class="folio-item__info">
                             <div class="folio-item__meta">
                                 <span class="cat">App Development</span>
-                                <a href="https://www.behance.net/" title="Project Link" class="project-link">Project
+                                <a href="https://apps.apple.com/app/apple-store/id1463956713" title="Project Link" class="project-link">Project
                                     Link</a>
                             </div>
                             <h4 class="folio-item__title">Logically</h4>
@@ -476,7 +476,7 @@
                         <div class="folio-item__caption">
                             <p>Check Fake News and Verify Facts (React Native), The Logically App provides reliable news
                                 and fact-checking services powered by a large team and advanced AI technology. <a
-                                    href="#">Play Store Link</a> <a href="#">App Store link</a></p>
+                                    href="https://play.google.com/store/apps/details?id=com.logically&hl=en_IN&gl=US&pli=1">Play Store Link</a> <a href="https://apps.apple.com/app/apple-store/id1463956713">App Store link</a></p>
                         </div>
                     </div>
                 </div> <!-- end column -->
@@ -517,13 +517,13 @@
                         <div class="folio-item__info">
                             <div class="folio-item__meta">
                                 <span class="cat">App Development</span>
-                                <a href="https://www.behance.net/" title="Project Link" class="project-link">Project
+                                <a href="https://play.google.com/store/apps/details?id=in.ksum.eventconnect" title="Project Link" class="project-link">Project
                                     Link</a>
                             </div>
                             <h4 class="folio-item__title">Ksum</h4>
                         </div>
                         <div class="folio-item__caption">
-                            <p> The Official application of Kerala Startup Mission (KSUM). <a href="#">Play Store
+                            <p> The Official application of Kerala Startup Mission (KSUM). <a href="https://play.google.com/store/apps/details?id=in.ksum.eventconnect">Play Store
                                     Link</a></p>
                         </div>
                     </div>
@@ -540,7 +540,7 @@
                         <div class="folio-item__info">
                             <div class="folio-item__meta">
                                 <span class="cat">Android Development</span>
-                                <a href="https://www.behance.net/" title="Project Link" class="project-link">Project
+                                <a href="https://play.google.com/store/apps/details?id=com.golak&hl=en" title="Project Link" class="project-link">Project
                                     Link</a>
                             </div>
                             <h4 class="folio-item__title">
@@ -548,7 +548,7 @@
                             </h4>
                         </div>
                         <div class="folio-item__caption">
-                            <p> A platform built by islanders for the easiest travel to Lakshadweep. <a href="#">Play
+                            <p> A platform built by islanders for the easiest travel to Lakshadweep. <a href="https://play.google.com/store/apps/details?id=com.golak&hl=en">Play
                                     Store Link</a></p>
                         </div>
                     </div>
@@ -567,14 +567,14 @@
                         <div class="folio-item__info">
                             <div class="folio-item__meta">
                                 <span class="cat">Android Development</span>
-                                <a href="https://www.behance.net/" title="Project Link" class="project-link">Project
+                                <a href="https://play.google.com/store/apps/details?id=tecort.onlyfresh" title="Project Link" class="project-link">Project
                                     Link</a>
                             </div>
                             <h4 class="folio-item__title">OnlyFresh</h4>
                         </div>
                         <div class="folio-item__caption">
                             <p> E–commerce app it allows users to browse and buy products and shopping categories fresh
-                                fish, seafood and poultry products. <a href="#">Play Store Link</a></p>
+                                fish, seafood and poultry products. <a href="https://play.google.com/store/apps/details?id=tecort.onlyfresh">Play Store Link</a></p>
                         </div>
                     </div>
                 </div> <!-- end column -->
