WhatsApp link update

--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                             <li><a href="https://www.linkedin.com/in/arunalexanderk/">Linkedin</a></li>
                             <li><a href="https://www.instagram.com/arunalexanderkumbalanghi">Instagram</a></li>
                             <li><a href="https://github.com/arunalexkk">Github</a></li>
-                            <li><a href="https://api.whatsapp.com/send?phone=+919020283737">WhatsApp</a></li>
+                            <li><a href="https://wa.me/+${919020283737}">WhatsApp</a></li>
                         </ul>
                     </div>
 
