--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                         <div class="folio-item__info">
                             <div class="folio-item__meta">
                                 <span class="cat">App Development</span>
-                                <a href="https://www.behance.net/" title="Project Link" class="project-link">Project
+                                <a href="#0" title="Project Link" class="project-link">Project
                                     Link</a>
                             </div>
                             <h4 class="folio-item__title">Findshoponline</h4>
@@ -712,7 +712,7 @@
 
                     <div class="s-footer__buttons">
                         <a href="mailto:arunalexkk@outlook.com" class="btn btn--primary u-fullwidth">Say Hello</a>
-                        <a href="https://arunalexkk.github.io/assets/Arun_alexander_cv.pdf" class="btn btn--stroke u-fullwidth">Get My CV</a>
+                        <a href="https://arunalexkk.github.io/assets/Arun_Alexander_cv.pdf" class="btn btn--stroke u-fullwidth">Get My CV</a>
                     </div>
 
                     </p>
