--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
                             <li><a href="#0">TikTok</a></li>
                             <li><a href="#0">Karnataka Police</a></li>
                             <li><a href="#0">Kerala Police</a></li>
+                            <li><a href="#0">Karnataka govt</a></li>
                             <li><a href="#0">Mg University</a></li>
                             <li><a href="#0">Kerala Startup Mission</a></li>
                             <li><a href="#0">EU</a></li>
