--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         <ul class="clients-list text-huge-title">
                             <li><a href="#0">TikTok</a></li>
                             <li><a href="#0">Karnataka Police</a></li>
-                            <li><a href="#0">Kerala Police</a></li>
+                            <li><a href="#0">Kerala MVD</a></li>
                             <li><a href="#0">Karnataka govt</a></li>
                             <li><a href="#0">Mg University</a></li>
                             <li><a href="#0">Kerala Startup Mission</a></li>
