--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             contributing to organizational objectives.
                         </p>
                         <p class="attention-getter animate-on-load">
-                            I've collaborated with top teams like Tecort Innovation and worked with mobile ad networks
+                            I've collaborated with top teams like Tecort Innovation Pvt Ltd and worked with mobile ad networks
                             such as Startapp and Admob.
                         </p>
                         <p class="attention-getter animate-on-load">
