--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
-                        <li><a href="#colophon" class="smoothscroll">Contact</a></li>
+                        <li><a href="#colophon" class="smoothscroll">Contacts</a></li>
                     </ul>
                 </nav> <!-- end s-header__nav -->
 
