--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                                         class="testimonial-slider__avatar">
                                     <cite class="testimonial-slider__cite">
                                         <strong>Shyjith Pala</strong>
-                                        <span>ICICI bank</span>
+                                        <span>ICICI Bank</span>
                                     </cite>
                                 </div>
                             </div> <!-- end testimonial-slider__slide -->
