--- a/index.html
+++ b/index.html
@@ -540,63 +540,63 @@
                         <div class="row clients-list block-lg-one-fourth block-md-one-third block-tab-one-half block-stack">
     
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://reactnative.dev/">
                                     <img src="images/clients/react.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://developer.android.com/">
                                     <img src="images/clients/android.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://flutter.dev/learn">
                                     <img src="images/clients/flutter.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://www.javascript.com/">
                                     <img src="images/clients/js.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://www.typescriptlang.org/">
                                     <img src="images/clients/Ts.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://kotlinlang.org/">
                                     <img src="images/clients/kotlin.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://www.java.com/en/">
                                     <img src="images/clients/java.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://github.com/">
                                     <img src="images/clients/github.svg" alt="">
                                 </a>
                             </div>
                             
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://firebase.google.com/">
                                     <img src="images/clients/firebase.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://graphql.org/">
                                     <img src="images/clients/graphql.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://www.atlassian.com/software/jira">
                                     <img src="images/clients/jira.svg" alt="">
                                 </a>
                             </div>
                             <div class="column clients-list__item">
-                                <a href="#0">
+                                <a href="https://git-scm.com/">
                                     <img src="images/clients/git.svg" alt="">
                                 </a>
                             </div>
@@ -702,8 +702,8 @@
                     <div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
-                            <a href="mailto:sayhello@luther.com" class="mailtoui">arunalexkk@outlook.com</a> <br>
-                            <a href="tel:+1975432345">+91-7012897324</a>
+                            <a href="mailto:arunalexkk@outlook.com" class="mailtoui">arunalexkk@outlook.com</a> <br>
+                            <a href="tel:+917012897324">+91-7012897324</a>
                         </p>
                     </div>
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
@@ -716,7 +716,7 @@
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
-                        <a href="mailto:sayhello@luther.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
+                        <a href="mailto:arunalexkk@outlook.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
                     </div>
                 </div> <!-- end contact-bottom -->
 
