Project images update
Co-Authored-By: Anjana Joseph  <50010423+AnjanaJoeJoseph@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
                     </div>
 
                     <ul class="intro-social">
-                        <li><a href="https://www.linkedin.com/in/arunalexanderk/">Linkedin</a></li>
-                        <li><a href="https://www.instagram.com/arunalexanderkumbalanghi">Instagram</a></li>
-                        <li><a href="https://github.com/arunalexkk">Github</a></li>
                         <li><a href="https://wa.me/+${919020283737}">WhatsApp</a></li>
+                        <li><a href="https://stackoverflow.com/users/7315863/arun-alexander">Stackoverflow</a></li>
+                        <li><a href="https://github.com/arunalexkk">Github</a></li>
+                        <li><a href="https://g.dev/ARUN_ALEXANDER">GoogleDev</a></li>
+                        <li><a href="https://www.linkedin.com/in/arunalexanderk/">Linkedin</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
@@ -709,10 +710,10 @@
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="https://wa.me/+${919020283737}">WhatsApp</a></li>
                             <li><a href="https://www.linkedin.com/in/arunalexanderk/">Linkedin</a></li>
-                            <li><a href="https://www.instagram.com/arunalexanderkumbalanghi">Instagram</a></li>
+                            <li><a href="https://g.dev/ARUN_ALEXANDER">Google Dev</a></li>
                             <li><a href="https://github.com/arunalexkk">Github</a></li>
+                            <li><a href="https://wa.me/+${919020283737}">WhatsApp</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
