--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
                                 <div class="testimonial-slider__slide swiper-slide">
                                     <div class="testimonial-slider__author">
-                                        <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonial-slider__avatar">
+                                        <img src="images/avatars/user-06.jpg" alt="Author image" class="testimonial-slider__avatar">
                                         <cite class="testimonial-slider__cite">
                                             <strong>Arun Pillai</strong>
                                             <span>NatWest Group</span>
@@ -732,7 +732,7 @@
 
             <div class="row">
                 <div class="column ss-copyright">
-                    <span>© Copyright Luther 2021</span> 
+                    <!-- <span>© Copyright Luther 2021</span>  -->
                     <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
                 </div>
 
