--- a/index.html
+++ b/index.html
@@ -600,6 +600,26 @@
                                     <img src="images/clients/git.svg" alt="">
                                 </a>
                             </div>
+                            <div class="column clients-list__item">
+                                <a href="https://git-scm.com/">
+                                    <img src="images/clients/gcloud.svg" alt="">
+                                </a>
+                            </div>
+                            <div class="column clients-list__item">
+                                <a href="https://git-scm.com/">
+                                    <img src="images/clients/ios.svg" alt="">
+                                </a>
+                            </div>
+                            <div class="column clients-list__item">
+                                <a href="https://git-scm.com/">
+                                    <img src="images/clients/aws.svg" alt="">
+                                </a>
+                            </div>
+                            <div class="column clients-list__item">
+                                <a href="https://git-scm.com/">
+                                    <img src="images/clients/figma.svg" alt="">
+                                </a>
+                            </div>
                         </div> <!-- clients-list -->
                     </div> <!-- end column lg-12 -->
                 </div> <!-- end s-clients -->
