--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                         I implemented AI clustering for fact-checking, increasing data accuracy by 80%.
                                          With 90% test coverage through TDD, I ensure robust code and improve product efficiency by up to 30%.
                                           I also present technical details to 10+ team members, enhancing project efficiency and communication.</p></div>
-                            </div>
+                                </div>
     
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
@@ -682,7 +682,10 @@
                                         I’ve had the pleasure of working closely with Arun, and I can’t emphasize enough how impressive his can-do attitude is.
                                     </p>
                                     <p>
-                                        Not only does he bring a refreshing positivity to the team, but he also approaches challenges with enthusiasm and a genuine eagerness to learn. Arun is incredibly open to suggestions, which makes him an outstanding developer. From his very first days, he demonstrated remarkable leadership potential by consistently taking on responsibilities and executing them with grace. It’s no exaggeration to say that Arun is a true asset to any team!
+                                        Not only does he bring a refreshing positivity to the team, but he also approaches challenges with enthusiasm and a genuine eagerness to learn.
+                                         Arun is incredibly open to suggestions, which makes him an outstanding developer. From his very first days,
+                                          he demonstrated remarkable leadership potential by consistently taking on responsibilities and executing them with grace.
+                                           It’s no exaggeration to say that Arun is a true asset to any team!
                                     </p>
                                 </div> <!-- end testimonial-slider__slide -->
         
