--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Experienced mobile application developer with over 7.10 years
+                                Experienced mobile application developer with approximately 8 years
                                  of expertise in mobile user interface design and development methodologies.
                             </p>
                             <p class="attention-getter" data-animate-el>
