--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">Logically Technology Pvt Ltd</h3>
                                         <h5 class="timeline__meta">Application Developer</h5>
-                                        <p class="timeline__timeframe">Apr 2020 - Present</p>
+                                        <p class="timeline__timeframe">Apr 2020 - Oct 2024</p>
                                 </div>
                                 <div class="timeline__desc">
                                     <p>As a developer, I’ve enhanced product development with React JS and React Native, boosting speed and reducing bugs by 25%.
